Agrego componentes poster y pares

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,9 +1,26 @@
 <ion-content>
-  <ion-slides [options]="slideOpts">
-    <ion-slide *ngFor="let Pelis of newpelis">
-      <ion-card>
-        <img [src]="Pelis.backdrop_path | img">  
-      </ion-card>
-    </ion-slide>
-  </ion-slides>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col >
+        <h3>Pelis nuevas</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <app-slideshow-backdrop [movies]="newpelis"></app-slideshow-backdrop>
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col >
+          <h3>Cartelera</h3>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <app-slide-show-poster [movies]="newpelis"></app-slide-show-poster>
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col >
+          <h3>Populares</h3>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <app-slideshow-pares [movies]="populares"></app-slideshow-pares>
 </ion-content>
