--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="caret-forward-circle-outline"></ion-icon>
-      <ion-label>Peliculas</ion-label>
+    <ion-tab-button tab="tab1" (click)="CC(1)">
+      <ion-icon name="caret-forward-circle-outline" color="{{t1}}"></ion-icon>
+      <ion-label color="{{t1}}">Peliculas</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="search-circle-outline"></ion-icon>
-      <ion-label>Buscar</ion-label>
+    <ion-tab-button tab="tab2" (click)="CC(2)">
+      <ion-icon name="search-circle-outline" color="{{t2}}"></ion-icon>
+      <ion-label color="{{t2}}">Buscar</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="heart-circle-outline"></ion-icon>
-      <ion-label>Favoritos</ion-label>
+    <ion-tab-button tab="tab3" (click)="CC(3)">
+      <ion-icon name="heart-circle-outline" color="{{t3}}"></ion-icon>
+      <ion-label color="{{t3}}">Favoritos</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
