Update de detalles de las peliculas

--- a/src/app/components/slideshow-backdrop/slideshow-backdrop.component.html
+++ b/src/app/components/slideshow-backdrop/slideshow-backdrop.component.html
@@ -1,6 +1,6 @@
 <ion-slides [options]="slideOpts">
   <ion-slide *ngFor="let Pelis of movies">
-    <ion-card>
+    <ion-card (click)="verDetail(Pelis.id)">
       <img [src]="Pelis.backdrop_path | img">  
     </ion-card>
   </ion-slide>
