--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -22,5 +22,5 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-    <app-slideshow-pares [movies]="populares"></app-slideshow-pares>
+    <app-slideshow-pares [movies]="populares" (cargarMas)="cargarMas()"></app-slideshow-pares>
 </ion-content>
