--- a/src/app/components/slideshow-pares/slideshow-pares.component.html
+++ b/src/app/components/slideshow-pares/slideshow-pares.component.html
@@ -2,10 +2,16 @@
   <ion-slide *ngFor="let pares of movies | pares">
     <ion-row>
       <ion-col size="12" *ngFor="let Pelis of pares">
-        <ion-card >
+        <ion-card (click)="verDetail(Pelis.id)">
           <img class="poster" [src]="Pelis.poster_path | img">  
         </ion-card>
       </ion-col>
     </ion-row>
   </ion-slide>
+  <ion-slide class="slide-mas">
+    <ion-button class="btn-mas"  expand="full"  size="large" (click)="onClick()">
+      <ion-icon slot="icon-only" name="add"></ion-icon>
+    </ion-button>
+  </ion-slide>
 </ion-slides>
+
